syntax = "proto3";

package codehorse.mpaas.daemonset;

option go_package = "github.com/solodba/devcloud/mpaas/apps/daemonset";

// 导入外部包
import "apps/pod/pb/pod.proto";
import "common/pb/github.com/solodba/mcube/pb/meta/meta.proto";

// CreateDaemonSetRequest结构体
message CreateDaemonSetRequest {
    // @gotags: bson:"base" json:"base"
    Base Base = 1;
    // @gotags: bson:"template" json:"template"
    pod.Pod Template = 2;
}

// Base结构体
message Base {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"labels" json:"labels"
    repeated ListMapItem Labels = 3;
    // @gotags: bson:"replicas" json:"replicas"
    int32 Replicas = 4;
    // @gotags: bson:"selector" json:"selector"
    repeated ListMapItem Selector = 5;
}

// 通用键值对结构体
message ListMapItem {
    // @gotags: bson:"key" json:"key"
    string Key = 1;
    // @gotags: bson:"value" json:"value"
    string Value = 2;
}

// DaemonSet结构体
message DaemonSet {
    // @gotags: bson:",inline" json:"meta"
    codehorse.mcube.meta.Meta Meta = 1;
    // @gotags: bson:",inline" json:"daemonset"
    CreateDaemonSetRequest DaemonSet = 2;
}

// DaemonSetListItem结构体
message DaemonSetListItem {
    // @gotags: bson:"name" json:"name"
    string Name = 1;
    // @gotags: bson:"namespace" json:"namespace"
    string Namespace = 2;
    // @gotags: bson:"replicas" json:"replicas"
    int32 Replicas = 3;
    // @gotags: bson:"ready" json:"ready"
    int32 Ready = 4;
    // @gotags: bson:"upToDate" json:"upToDate"
    int32 UpToDate = 5;
    // @gotags: bson:"available" json:"available"
    int32 Available = 6;
    // @gotags: bson:"age" json:"age"
    int64 Age = 7;
}

// DaemonSetList结构体
message DaemonSetList {
    // @gotags: bson:"total" json:"total"
    int64 Total = 1;
    // @gotags: bson:"items" json:"items"
    repeated DaemonSetListItem Items = 2;
}